--- a/src/main/resources/dart2-v3template/_complex_copy_required.mustache
+++ b/src/main/resources/dart2-v3template/_complex_copy_required.mustache
@@ -1,1 +1,1 @@
-final _copy_{{{name}}} = (({{{dataType}}} data) { return {{>_copy}}; }({{{name}}}));
+(({{{dataType}}} data) { return {{>_copy}}; }(this.{{{name}}}));
