--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -97,13 +97,24 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
   if ({{{name}}} != null) {
         {{/x-dont-tojson-null}}
       {{#isArray}}
+        {{#vendorExtensions.x-ns-default-val}}
+          if ({{{name}}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.isNotEmpty{{#isNullable}}{{#nullSafe}} == true{{/nullSafe}}{{/isNullable}}) {
+        {{/vendorExtensions.x-ns-default-val}}
+
         json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.map((v) => LocalApiClient.serialize(v)){{^nullSafe}}?{{/nullSafe}}.toList();
+        {{#vendorExtensions.x-ns-default-val}}
+          }
+        {{/vendorExtensions.x-ns-default-val}}
+
       {{/isArray}}
       {{#isMap}}
+        {{#isNullable}}if ({{{name}}}{{#nullSafe}}?{{/nullSafe}}.isNotEmpty{{#nullSafe}} == true{{/nullSafe}}) { {{/isNullable}}
         json[r'{{baseName}}'] = Map.fromIterables({{{name}}}{{#isNullable}}{{#nullSafe}}!{{/nullSafe}}{{/isNullable}}.keys,
           {{{name}}}{{#isNullable}}{{#nullSafe}}!{{/nullSafe}}{{/isNullable}}.values.map((v) => LocalApiClient.serialize(v)));
+        {{#isNullable}} } {{/isNullable}}
       {{/isMap}}
       {{^items}}
+        {{#isNullable}}{{#nullSafe}}if ({{{name}}} != null) { {{/nullSafe}}{{/isNullable}}
         {{#isDateTime}}
           json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.toUtc().toIso8601String();
         {{/isDateTime}}
@@ -122,6 +133,7 @@ class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
         {{#isAnyType}}
           json[r'{{baseName}}'] = {{{name}}};
         {{/isAnyType}}
+        {{#isNullable}}{{#nullSafe}} } {{/nullSafe}}{{/isNullable}}
       {{/items}}
     {{#x-dont-tojson-null}} } {{#generateNullValuesToJson}} else {
     json[r'{{baseName}}'] = null;
